Continued working on the outline

--- a/Outline.tex
+++ b/Outline.tex
@@ -45,18 +45,18 @@
 
 \mainmatter
 
-\title{Title goes here\thanks{based on an earlier version by Jürgen Börstler}}
+\title{Guidelines for Designing Touch Interfaces for Controlling Robotic Nozzles in Critical Emergency Situations. \thanks{wtf}}
 
 % The abbreviated title will be shown in the headers of even pages.
 % You should use the full title unless it is too long.
-\titlerunning{Example Outline and Annotated Bibliography}
+\titlerunning{Touch Interfaces for Robotic Nozzles}
 
-\author{Frank Drewes}
+\author{Albin Hübsch}
 
 \institute{
 	Department of Computing Science \\
 	Umeå University, Sweden \\
-	\email{drewes@cs.umu.se}
+	\email{id11ahh@cs.umu.se}
 }
 
 \maketitle
@@ -72,3 +72,64 @@
 % \end{abstract}
 %
 %%%%% END OF 2nd ADJUSTMENTS SECTION %%%%%
+
+\section{Introduction}
+Here goes text. Write about Purpose, Motivation, Contents and Resources.
+
+\begin{description}
+	\item[Purpose of the paper] Well, explain the purpose of the paper.
+	\item[Motivation for the paper] Make clear why this paper needs to be done.
+	\item[Content] The final paper will include...
+	\item[Resources] Resources I we plan to use in the work of this paper.
+\end{description}
+
+\section{Method}
+The main goal with this paper is to evaluate if increased color contrast in a touch screen interface for controlling robotic nozzles can result in zero faulty interactions with the touch interface in emergency situations.
+
+\subsection{Design of an A/B test}
+In order to test if increased color contrast in a touch interface can completedly remove all faulty interactions an A/B test was conducted.
+\emph{This section will contain a short but descriptive text about how the A/B test was prepared, built and performed. It will describe who participated}.
+
+\subsection{Evaluation of the A/B test}
+This section will in short describe the evaluation process of the A/B test. How the test results were collected and what parameters we've had focus on during the test.
+
+\section{Result}
+All results produced from these tests are here presented with clear numbers
+
+\subsection{A/B test}
+text about a/b test results
+
+\subsection{Evaluation}
+text about the results that came out of the evaluation.
+
+\section{Discussion}
+In this section we'll discuss the results from the tests. We'll discuss what the results mean and how they should, and could be interpreted.
+
+\subsection{Conclusions and Guidelines}
+Here we'll present our conclusions based on the resulting outcome from the tests. We'll also present our four guidelines on how to design a touch interface compatible for emergency situations. These guidlines will be created based on the test results.
+
+\subsection{Drawbacks and Limitations}
+Present drawbacks and limitations with both the used method and the produced results. Time is limited, therefore a bullet proof test can not be performed which means the results will somewhat be limited in credibility.
+
+\subsection{Future Work}
+Due to the limited time we have on this paper there will be alot of things that can be improved. We'll in this section give our suggestions on things that could be done in future or continued work.
+
+%%%%% BEGIN OF 3rd ADJUSTMENTS SECTION %%%%%
+% For the outline and annotated bibliography (deliverable 2)
+% you must use the following two commands:
+%
+\nocite{*}  % Includes ALL entries from the .bib-file, even if they are
+            % not '\cite{}'-ed in the text above
+\bibliographystyle{plain-annote}
+%
+% For the full and final paper (deliverables 3 and 4a/b)
+% use ONLY the following commands (i.e. put the commands above into
+% comments and uncomment the command below):
+%
+% \bibliographystyle{splncs}
+%
+%%%%% END OF ADJUSTMENTS SECTION %%%%%
+
+\bibliography{demo}
+
+\end{document}
