Continued working on Outline, milestone before annotations

--- a/Outline.tex
+++ b/Outline.tex
@@ -74,45 +74,40 @@
 %%%%% END OF 2nd ADJUSTMENTS SECTION %%%%%
 
 \section{Introduction}
-Here goes text. Write about Purpose, Motivation, Contents and Resources.
+Introduction part will contain a purpose of the paper and a motivation for why the paper was made.
 
 \begin{description}
-	\item[Purpose of the paper] Well, explain the purpose of the paper.
-	\item[Motivation for the paper] Make clear why this paper needs to be done.
-	\item[Content] The final paper will include...
-	\item[Resources] Resources I we plan to use in the work of this paper.
+	\item[Purpose of the paper] Can a well designed touch interface for controlling robotic nozzles reach a level of zero faulty interactions in critical emergency situations by increasing the color contrast of the interface?
+	\item[Motivation for the paper] In critical emergency situations, like in the case of fire, a graphical touch user interface should not be the weak link on getting the job done when controlling robotic nozzles. One single press on the wrong button can be the difference between life or death.
 \end{description}
 
 \section{Method}
 The main goal with this paper is to evaluate if increased color contrast in a touch screen interface for controlling robotic nozzles can result in zero faulty interactions with the touch interface in emergency situations.
 
 \subsection{Design of an A/B test}
-In order to test if increased color contrast in a touch interface can completedly remove all faulty interactions an A/B test was conducted.
+In order to test if increased color contrast in a touch interface can completely remove all faulty interactions an A/B test was conducted.
 \emph{This section will contain a short but descriptive text about how the A/B test was prepared, built and performed. It will describe who participated}.
 
 \subsection{Evaluation of the A/B test}
 This section will in short describe the evaluation process of the A/B test. How the test results were collected and what parameters we've had focus on during the test.
 
 \section{Result}
-All results produced from these tests are here presented with clear numbers
-
-\subsection{A/B test}
-text about a/b test results
+All results produced from the tests are here presented with clear numbers and conclusions.
 
 \subsection{Evaluation}
-text about the results that came out of the evaluation.
+The evaluation itself and a text about the evaluation results.
 
 \section{Discussion}
 In this section we'll discuss the results from the tests. We'll discuss what the results mean and how they should, and could be interpreted.
 
 \subsection{Conclusions and Guidelines}
-Here we'll present our conclusions based on the resulting outcome from the tests. We'll also present our four guidelines on how to design a touch interface compatible for emergency situations. These guidlines will be created based on the test results.
+Here we'll present our conclusions based on the resulting outcome from the tests. We'll also present our four guidelines on how to design a touch interface compatible for emergency situations. These guidelines will be created based on the test results.
 
 \subsection{Drawbacks and Limitations}
 Present drawbacks and limitations with both the used method and the produced results. Time is limited, therefore a bullet proof test can not be performed which means the results will somewhat be limited in credibility.
 
 \subsection{Future Work}
-Due to the limited time we have on this paper there will be alot of things that can be improved. We'll in this section give our suggestions on things that could be done in future or continued work.
+Due to the limited time we have on this paper there will be a lot of things that can be improved. We'll in this section give our suggestions on things that could be done in future or continued work.
 
 %%%%% BEGIN OF 3rd ADJUSTMENTS SECTION %%%%%
 % For the outline and annotated bibliography (deliverable 2)
