--- a/Outline.tex
+++ b/Outline.tex
@@ -125,6 +125,6 @@ Due to the limited time we have on this paper there will be a lot of things that
 %
 %%%%% END OF ADJUSTMENTS SECTION %%%%%
 
-\bibliography{demo}
+\bibliography{Bibliography}
 
 \end{document}
