Updates to annotations

--- a/Outline.tex
+++ b/Outline.tex
@@ -36,6 +36,7 @@
 
 \usepackage[T1]{fontenc}  %% needed for special characters (umlaut)
 \usepackage[latin1]{inputenc}
+\usepackage{textcomp}
 \usepackage{graphicx}     %% for graphical things such as including pictures
 \usepackage{url}          %% for proper formatting of URLs
 
