Hand in of Outline for Peer Review

--- a/Outline.tex
+++ b/Outline.tex
@@ -35,8 +35,7 @@
 %%%%% END OF 1st ADJUSTMENTS SECTION %%%%%
 
 \usepackage[T1]{fontenc}  %% needed for special characters (umlaut)
-\usepackage[latin1]{inputenc}
-\usepackage{textcomp}
+\usepackage[utf8]{inputenc}
 \usepackage{graphicx}     %% for graphical things such as including pictures
 \usepackage{url}          %% for proper formatting of URLs
 
@@ -46,11 +45,11 @@
 
 \mainmatter
 
-\title{Guidelines for Designing Touch Interfaces for Controlling Robotic Nozzles in Critical Emergency Situations. \thanks{wtf}}
+\title{Guidelines for Designing Touch Interfaces for Controlling Robotic Nozzles in Critical Emergency Situations.}
 
 % The abbreviated title will be shown in the headers of even pages.
 % You should use the full title unless it is too long.
-\titlerunning{Touch Interfaces for Robotic Nozzles}
+\titlerunning{Touch Interfaces for Robotic Nozzles in Emergency Situations}
 
 \author{Albin Hübsch}
 
@@ -86,7 +85,7 @@ Introduction part will contain a purpose of the paper and a motivation for why t
 The main goal with this paper is to evaluate if increased color contrast in a touch screen interface for controlling robotic nozzles can result in zero faulty interactions with the touch interface in emergency situations.
 
 \subsection{Design of an A/B test}
-In order to test if increased color contrast in a touch interface can completely remove all faulty interactions an A/B test was conducted.
+In order to test if increased color contrast in a touch interface can  completely remove all faulty interactions an A/B test will be performed. Two identical applications, despite differences in color contrast, with just a few buttons will be measured against each other. We will measure time and errors. The test will have a time pressure to simulate an emergency situation. Instructions will be given on a secondary screen.
 \emph{This section will contain a short but descriptive text about how the A/B test was prepared, built and performed. It will describe who participated}.
 
 \subsection{Evaluation of the A/B test}
