--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -71,7 +71,7 @@
   author={Norman, Donald A},
   year={2013},
   publisher={Basic books},
-  Annote={An old classic. A lot of useful tips and guidelines on how design works in everyday things.}
+  Annote={An old classic. A lot of useful tips and guidelines on how design works in everyday things. Will be used when the guidelines will be formed.}
 }
 
 @book{hoober2011designing,
@@ -79,5 +79,5 @@
   author={Hoober, Steven and Berkman, Eric},
   year={2011},
   publisher={" O'Reilly Media, Inc."},
-  Annote = {Book that gives a deeper look into designing mobile interfaces. A lot of inspiration and good work practices with do´s and dont´s. Also general guidelines for designing mobile interfaces are presented.}
+  Annote = {Book that gives a deeper look into designing mobile interfaces. A lot of inspiration and good work practices with do's and dont's. Also general guidelines for designing mobile interfaces are presented.}
 }
