Fixes to the outline

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -79,5 +79,5 @@
   author={Hoober, Steven and Berkman, Eric},
   year={2011},
   publisher={" O'Reilly Media, Inc."},
-  Annote = {Book that gives a deeper look into designing mobile interfaces. A lot of inspiration and good work practices with do's and dont's. Also general guidelines for designing mobile interfaces are presented.}
+  Annote = {Book that gives a deeper look into designing mobile interfaces. A lot of inspiration and good work practices with things to do and not to do. Also general guidelines for designing mobile interfaces are presented.}
 }
