--- a/Outline.tex
+++ b/Outline.tex
@@ -77,37 +77,39 @@
 Introduction part will contain a purpose of the paper and a motivation for why the paper was made.
 
 \begin{description}
-	\item[Purpose of the paper] Can a well designed touch interface for controlling robotic nozzles reach a level of zero faulty interactions in critical emergency situations by increasing the color contrast of the interface?
-	\item[Motivation for the paper] In critical emergency situations, like in the case of fire, a graphical touch user interface should not be the weak link on getting the job done when controlling robotic nozzles. One single press on the wrong button can be the difference between life or death.
+	\item[Purpose] Can a well designed touch interface with differences in color contrast for controlling robotic water cannon nozzles reach a lower level of faulty interactions in emergency situations.
+	\item[Motivation] In critical emergency situations, like in the case of fire, a graphical touch user interface should not be the weak link on getting the job done when controlling robotic water cannon nozzles. One wrong push of a touch screen button in the interface can be the difference between life or death.
 \end{description}
+The main goal with this paper is to evaluate if increased color contrast in a touch screen interface for controlling robotic water cannon nozzles can result in fewer faulty interactions, compared to a low contrast touch interface, in emergency situations. And from this we will present four guidelines on how to design a good touch interface for emergency situations. These guidelines will be useful for anyone designing touch interfaces made for demanding situations.
 
 \section{Method}
-The main goal with this paper is to evaluate if increased color contrast in a touch screen interface for controlling robotic nozzles can result in zero faulty interactions with the touch interface in emergency situations.
+In order to be able to test if increased color contrast has an substantial impact on the usability of a touch interface we will design two identical touch interfaces for controlling robotic water cannon nozzles. The only difference between these interfaces will be the color contrast. When designing the touch interface we will follow guidelines defined in the found references. Later these two interfaces will be tested by an A/B test. The test will then be evaluated to produce a result and a conclusion and finally form our four design guidelines.
 
 \subsection{Design of an A/B test}
-In order to test if increased color contrast in a touch interface can  completely remove all faulty interactions an A/B test will be performed. Two identical applications, despite differences in color contrast, with just a few buttons will be measured against each other. We will measure time and errors. The test will have a time pressure to simulate an emergency situation. Instructions will be given on a secondary screen.
+In order to test if increased color contrast can lower faulty interactions in a touch interface an A/B test will be developed and performed. Two identical applications, despite differences in color contrast, with just a few touch screen buttons will be measured against each other. We will measure both time and amount of errors it takes to perform each given task. The test persons will be told that there is a time limit and they have to do it as fast as they can in order to simulate an emergency situation. Instructions will be given on a secondary screen so that every test is consistent.
+
 \emph{This section will contain a short but descriptive text about how the A/B test was prepared, built and performed. It will describe who participated}.
 
 \subsection{Evaluation of the A/B test}
-This section will in short describe the evaluation process of the A/B test. How the test results were collected and what parameters we've had focus on during the test.
+This section will in short describe the evaluation process of the A/B test. How the test results were collected and what parameters we have had focus on during the test.
 
 \section{Result}
-All results produced from the tests are here presented with clear numbers and conclusions.
+All results produced from the tests are here presented with clear numbers, conclusions and figures/graphics.
 
 \subsection{Evaluation}
 The evaluation itself and a text about the evaluation results.
 
 \section{Discussion}
-In this section we'll discuss the results from the tests. We'll discuss what the results mean and how they should, and could be interpreted.
+In this section we will discuss the results from the tests. We will discuss what the results mean and how they should and could be interpreted.
 
 \subsection{Conclusions and Guidelines}
-Here we'll present our conclusions based on the resulting outcome from the tests. We'll also present our four guidelines on how to design a touch interface compatible for emergency situations. These guidelines will be created based on the test results.
+Here we will present our conclusions based on the resulting outcome from the tests. We will also present our four guidelines on how to design a touch interface compatible for emergency situations. These guidelines will be created based on the test results.
 
 \subsection{Drawbacks and Limitations}
 Present drawbacks and limitations with both the used method and the produced results. Time is limited, therefore a bullet proof test can not be performed which means the results will somewhat be limited in credibility.
 
 \subsection{Future Work}
-Due to the limited time we have on this paper there will be a lot of things that can be improved. We'll in this section give our suggestions on things that could be done in future or continued work.
+Due to the limited time we have on this paper there will be a lot of things that can be improved. We will in this section give our suggestions on things that could be done in future or continued work.
 
 %%%%% BEGIN OF 3rd ADJUSTMENTS SECTION %%%%%
 % For the outline and annotated bibliography (deliverable 2)
