--- a/Paper.tex
+++ b/Paper.tex
@@ -45,11 +45,19 @@
 
 \mainmatter
 
-\title{Guidelines for Designing Touch Interfaces for Controlling Robotic Nozzles in Critical Emergency Situations.}
+% \title{Guidelines for Designing Touch Interfaces for Controlling Robotic Nozzles in Critical Emergency Situations.}
+
+\title{Can a high color contrast touch interface increase user reaction time when using a smart phone web based application.}
+
+% response
+% reaction time
 
 % The abbreviated title will be shown in the headers of even pages.
 % You should use the full title unless it is too long.
-\titlerunning{Touch Interfaces for Robotic Nozzles in Emergency Situations}
+
+% \titlerunning{Touch Interfaces for Robotic Nozzles in Emergency Situations}
+
+\titlerunning{asd}
 
 \author{Albin Hübsch}
 
@@ -74,6 +82,10 @@ Here goes paper abstract
 %%%%% END OF 2nd ADJUSTMENTS SECTION %%%%%
 
 \section{Introduction}
+The main goal with this paper is to evaluate if color contrast has a significant impact on reaction time and usability in web based smart-phone applications. Consumer touch screen devices such as smart-phones has rapidly increased in amount and availability recent years. The touch screen technology have made great advances ~\cite{jennings2013touch} and it is more frequently used as a way of receiving user input. When technology moves to a broader audience, higher demands on usability needs to be set~\cite{gong2004guidelines}. 
+
+=== OLD BELOW
+
 The main goal with this paper is to evaluate if color contrast has a significant impact on usability when using a touch screen smart phone application for controlling robotic nozzles in emergency situations. From the results we will suggest four design guidelines to be used when designing applications for similar use or in similar situations. Consumer touch screen devices such as smart phones has increased in amount rapidly recent years and the touch screen technology have made great advances~\cite{jennings2013touch}. Since these devices now are available to almost everyone, higher demands on usability needs to be set~\cite{paredes2014sosphone}.
 
 Unifire, a company that builds robotic nozzles for water cannons has just introduced a controlling system to steer the nozzles from an application that can run on almost all touch screen smart phones (2015). But the use cases of this application, often in different emergency situations sets high demands on great usability. Defining great usability as fast and low on user input errors. A simplified version of this nozzle control application was modified to be used in these test.
