--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -81,3 +81,29 @@
   publisher={" O'Reilly Media, Inc."},
   Annote = {Book that gives a deeper look into designing mobile interfaces. A lot of inspiration and good work practices with things to do and not to do. Also general guidelines for designing mobile interfaces are presented.}
 }
+
+@article{mckeefry2003simple,
+  title={Simple reaction times in color space: the influence of chromaticity, contrast, and cone opponency},
+  author={McKeefry, Declan J and Parry, Neil RA and Murray, Ian J},
+  journal={Investigative Ophthalmology \& Visual Science},
+  volume={44},
+  number={5},
+  pages={2267--2276},
+  year={2003},
+  publisher={The Association for Research in Vision and Ophthalmology}
+}
+
+@book{marcus2013design,
+  title={Design, User Experience, and Usability: Health, Learning, Playing, Cultural, and Cross-cultural User Experience: Second International Conference, DUXU 2013, Held as Part of HCI International 2013, Las Vegas, NV, USA, July 21-26, 2013, Proceedings},
+  author={Marcus, Aaron},
+  volume={8013},
+  year={2013},
+  publisher={Springer}
+}
+
+@book{johnson2013designing,
+  title={Designing with the Mind in Mind: Simple Guide to Understanding User Interface Design Guidelines},
+  author={Johnson, Jeff},
+  year={2013},
+  publisher={Elsevier}
+}
